--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                                     <a href="" class="dropdown-item">News Item Management</a>
                                     <a href="" class="dropdown-item">Community</a>
                                 {% endif %}
-                                    <a href="{% url %}" class="dropdown-item">My Profile</a>
+                                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                                 {% else %}
                                     <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
