--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Product Management</a>
+                                    <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                                     <a href="" class="dropdown-item">News Item Management</a>
                                     <a href="" class="dropdown-item">Community</a>
                                 {% endif %}
