--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                         
                         <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" />
                         <div class="input-group-append">
-                            <button class="form-control btn btn-success border border-black rounded-0" value="submit" type="submit">
+                            <button class="form-control btn btn-success border border-black rounded-0" value="submit" type="submit" aria-label="search button">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
