--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,8 +4,8 @@
     <div class="container header-container">
         <div class="overlay"></div>
         <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="allauth-form-inner-content">
+            <div class="col-12 col-md-6 mb-4">
+                <div class="allauth-form-inner-content mb-4">
                     {% block inner_content %}
                     {% endblock %}
                 </div>
