--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,8 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
-                        
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" />
+                        <label for="siteSearch" class="sr-only">Search</label>
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" id="siteSearch" />
                         <div class="input-group-append">
                             <button class="form-control btn btn-success border border-black rounded-0" value="submit" type="submit" aria-label="search button">
                                 <span class="icon">
@@ -168,7 +168,7 @@
       <div class="row">
         <!-- Logo and social media links -->
         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+            <a href="{% url 'home' %}" aria-label="nav-link main-logo-link" class="nav-link main-logo-link">
                 <h2 class="logo-font text-black my-0"><strong>Love</strong>Fitness</h2>
                 <ul class="list-unstyled mb-0">
             <li class="mb-2"><a href="" class="text-white">Text</a></li>
