--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -34,8 +34,8 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="{% url 'products' %}?category=sports_nutrition" class="dropdown-item">Sports Nutrition (change later)</a>
-                <a href="" class="dropdown-item"></a>
-                <a href="" class="dropdown-item"></a>
+                <a href="" aria-label="dropdown-item" class="dropdown-item"></a>
+                <a href="" aria-label="dropdown-item" class="dropdown-item"></a>
                 <a href="{% url 'products' %}?category=sports_nutrition" class="dropdown-item">All Nutrition</a>
             </div>
         </li>
