--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -63,13 +63,13 @@
                                     <img class="card-img-top img-fluid rounded-1" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
-                                <div class="card-body pb-1 text-center">
-                                    <p class="mb-0 text-muted">{{ product.name }}</p>
+                                <div class="card-body text-center">
+                                    <p class="text-muted">{{ product.name }}</p>
                                 </div>
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-center font-weight-bold">£{{ product.price }}</p>
+                                            <p class="lead text-center font-weight-bold">£{{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
