--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,7 +19,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
       <!--Fitness Equipment image credited to Cosmopolitan - http://images.summitmedia-digital.com/cosmo/images/2020/07/18/exercise-equipment-at-home-1595034412.jpg -->
-      <img src="media/carousel_image_1.jpg" class="d-block w-100" style="width: 1000px;" alt="...">
+      <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_1.jpg" class="d-block w-100" style="width: 1000px;" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="">Fitness Equipment</h1>
         <p class="">View our extensive range of fitness equipment.</p>
@@ -27,7 +27,7 @@
     </div>
     <div class="carousel-item" data-bs-interval="2000">
       <!-- Protein Poweder image credited to University of Hull - https://www.hull.ac.uk/editor-assets/images/sport/sport-and-exercise-nutrition-hero-1900x800.xd1badcbf.jpg?crop=1800,800,50,0&f=jpg&q=85 -->
-      <img src="media/carousel_image_2.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="Protein Powders">
+      <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_2.jpg" style="width:1050px; height:700px;" class="d-block w-100" alt="Protein Powders">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="">Sports Nutrition</h2>
         <p class="">View our extensive range of sports nutrition.</p>
@@ -36,7 +36,7 @@
     <div class="carousel-item">
       <!-- Group Fitness image credited to Unsplash - https://unsplash.com/photos/gJtDg6WfMlQ -->
       
-      <img src="media/carousel_image_3.jpg" class="d-block w-100" alt="Woman doing yoga">
+      <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_3.jpg" class="d-block w-100" alt="Woman doing yoga">
       <div class="carousel-caption d-none d-md-block">
         <h2>Fitness Classes</h2>
         <p>View our extensive range of fitness classes.</p>
