--- a/templates/base.html
+++ b/templates/base.html
@@ -33,12 +33,27 @@
   <body>
     <!-- Header -->
     <header class="container-fluid fixed-top">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-            <div class="col-lg-4">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><strong>Love</strong>Fitness</h2>
-                </a>
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex mt-1">
+            <div class="col-lg-6">
+                <a href="mailto:fitness@lovefitness.co.uk" class="text-decoration-none" target="_self">
+                <i class="fas fa-envelope text-muted align-right" aria-hidden=true></i>
+                <span class="text-black text-uppercase">Email Us</span>
+                <span class="text-muted text-lowercase">Fitness@lovefitness.co.uk</span>
+            </a>
+            <i class="fas fa-phone-alt text-muted" aria-hidden=true></i>
+                <span class="text-black text-uppercase">Call Us</span>
+                <span class="text-muted text-lowercase">0800 1234 567</span>
+                
             </div>
+            <div class="col-lg-6 text-end social-icons mb-2">
+                <a href="https://www.facebook.com" target="_blank" rel="noreferrer" aria-label="Go to our facebook page (opens in new tab)" title="facebook"><i class="fab fa-facebook fa-fw"></i></a>
+                <a href="https://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i class="fab fa-twitter fa-fw"></i></a>
+                <a href="https://www.instagram.com" target="_blank" rel="noreferrer" aria-label="Go to our insta page (opens in new tab)" title="instagram"><i class="fab fa-instagram fa-fw"></i></a>
+                <a href="https://www.youtube.com" target="_blank" rel="noreferrer" aria-label="Go to our insta page (opens in new tab)" title="youtube"><i class="fab fa-youtube fa-fw"></i></a>
+            </div>
+            <hr>
+            
+            
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
