--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,6 +20,9 @@
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
+                <a class="category-badge text-decoration-none" href="{% url 'products' %}?category=sports_bra,leggings,shorts,tops_t-shirts,sports_nutrition,fitness_equipment{{ c.name }}">
+                    <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">Show All Products</span>
+                </a>
                 <hr class="w-50 mb-1">
             </div>
         </div>
