--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -84,8 +84,8 @@
                                                 </div>
                                             </div>
                                         </form>
-                                        <a class="update-link text-info"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+                                        <a class="update-link text-info"><button type="button" class="btn btn-outline-info btn-sm mt-1">Update</button></a>
+                                        <a class="remove-item text-danger float-end mt-1" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><button type="button" class="btn btn-outline-danger btn-sm">Remove</button></a>
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
