--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,7 +1,7 @@
 <div class="toast show fade text-white bg-success" role="alert" aria-live="assertive" aria-atomic="true" data-mdb-color="success" data-mdb-autohide="false">
   <div class="toast-header text-white bg-success">
     <i class="fas fa-check fa-lg me-2"></i>
-    <strong class="me-auto">Success!</strong>
+    <strong class="me-auto">Success</strong>
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
   <div class="toast-body bg-white text-muted">
