--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,51 +8,68 @@
     </div>
 </div>
 {% endblock %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/carousel.css' %}" type="text/css" />
+{% endblock %}
 
 {% block content %}
 <!-- Main Image Carousel -->
-<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<div class="slider">
+    <div class="slide current" data-bs-interval="10000">
+      <div class="content">
+        <h2 class="">Fitness Equipment</h2>
+        <p class="">View our extensive range of fitness equipment.</p>
+      </div>
     </div>
-    <!-- Carousel Inner -->    
-    <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-            <!--Fitness Equipment image credited to Cosmopolitan - http://images.summitmedia-digital.com/cosmo/images/2020/07/18/exercise-equipment-at-home-1595034412.jpg -->
-            <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_1.jpg" class="d-block w-100" style="width: 1000px;" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-                <h2 class="">Fitness Equipment</h2>
-                <p class="">View our extensive range of fitness equipment.</p>
-            </div>
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-            <!-- Protein Poweder image credited to University of Hull - https://www.hull.ac.uk/editor-assets/images/sport/sport-and-exercise-nutrition-hero-1900x800.xd1badcbf.jpg?crop=1800,800,50,0&f=jpg&q=85 -->
-            <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_2.jpg" class="d-block w-100" alt="Protein Powders" />
-            <div class="carousel-caption d-none d-md-block">
-                <h2 class="">Sports Nutrition</h2>
-                <p class="">View our extensive range of sports nutrition.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <!-- Group Fitness image credited to Unsplash - https://unsplash.com/photos/gJtDg6WfMlQ -->
-            <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/carousel_image_3.jpg" class="d-block w-100" alt="Woman doing yoga" />
-            <div class="carousel-caption d-none d-md-block">
-                <h2>Fitness Classes</h2>
+    <div class="slide">
+      <div class="content">
+        <h2 class="">Sports Nutrition</h2>
+        <p class="">View our extensive range of sports nutrition.</p>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="content">
+        <h2>Fitness Classes</h2>
                 <p>View our extensive range of fitness classes.</p>
-            </div>
-        </div>
+      </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
+    <div class="slide">
+      <div class="content">
+        <h1>Slide Four</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+          maxime, voluptatibus labore doloremque vero!
+        </p>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="content">
+        <h1>Slide Five</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+          maxime, voluptatibus labore doloremque vero!
+        </p>
+      </div>
+    </div>
+    <div class="slide">
+      <div class="content">
+        <h1>Slide Six</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit hic
+          maxime, voluptatibus labore doloremque vero!
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="buttons">
+    <button id="prev"><i class="fas fa-arrow-left"></i></button>
+    <button id="next"><i class="fas fa-arrow-right"></i></button>
+  </div>
+
+  <script src="main.js"></script>
+</body>
+</html>
+
 
 {% endblock %}
 <!-- Postload Javascript -->
