--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
+  <head>
         {% block meta %}
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta charset="utf-8" />
@@ -43,7 +43,7 @@
                 </div>
                 <!-- Search -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                    <form method="GET" action="">
+                    <form method="GET" action="{% url 'products' %}">
                         <div class="input-group w-100">
                             <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" />
                             <div class="input-group-append">
